# track_the_crocotta

./: README.md  game.cpp  game.hpp  main.cpp
command_line/: CMakeLists.txt  game.cpp  game.hpp  main.cpp  test.out
command_line/src/: main.cpp
openGL/: CMakeLists.txt
openGL/src/: glad.c  glad.h  main.cpp
